# cloupier

backend/: .stylish-haskell.yaml  Makefile  backend.cabal
backend/app/: Main.hs
backend/src/Data/: Job.hs  Motivation.hs  Progress.hs
backend/src/Model/: Job.hs  Motivation.hs  Progress.hs
frontend/: .editorconfig  .gitignore  package.json  pnpm-lock.yaml  spago.dhall
frontend/src/: Main.purs
frontend/src/Datas/: Job.purs
frontend/src/Pages/: Home.purs
