cabal-version:      2.4
name:               backend
version:            0.1.0.0
author:             hd2g
maintainer:         nagisa.159s.8673.trap@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable backend
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        backend

    hs-source-dirs:   app
    default-language: Haskell2010
