cabal-version:      2.4
name:               backend
version:            0.0.1.0
author:             hd2g
maintainer:         nagisa.159s.8673.trap@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

common defaults
  ghc-options:
    -Wall
  build-depends:
    protolude
  default-extensions:
    NoImplicitPrelude
    DataKinds
    TypeFamilies
    TypeOperators
    OverloadedStrings

library
  import: defaults
  exposed-modules:
    Model.Job
    Model.Motivation
    Model.Progress
  build-depends:
      base ^>=4.16.4.0
    , lens
    , time
    , uuid
  hs-source-dirs:   src
  default-language: GHC2021

executable backend
  import: defaults
  main-is:          Main.hs
  build-depends:
    base ^>=4.16.4.0,
    backend
  hs-source-dirs:   app
  default-language: GHC2021
